second commit, nothing much achieved

--- a/views/destroy.erb
+++ b/views/destroy.erb
@@ -1,4 +1,16 @@
-<form method="post" action="/pizza-orders">
+<form method="post" action="/pizza-orders/id">
+  <input type="submit" value="Delete Order"/>
+</form>
+
+
+
+
+
+
+
+
+
+<!-- <form method="post" action="/pizza-orders">
   <label for="first-name">First Name:</label>
   <input id="first-name" type="text" name="first_name"/>
 
@@ -17,4 +29,4 @@
 
   <input type="submit" value="Order Pizza"/>
 
-</form>
+</form> -->
