--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,11 @@
 <p>Name: <%= order.pretty_name() %>  </p>
 <p> Order: <%= order.quantity() %> x <%= order.topping() %> </p>
 <p> <a href="/pizza-orders/<%= order.id  %>">Show Order</a> </p>
+<form method="post" action="/pizza-orders/<%=order.id  %>/delete">
+
+
+  <input type="submit" value="Delete Order"/>
+</form>
+
 <hr />
 <% end %>
